Bug 185232 - Images can not be removed from within the light table
Summary: Images can not be removed from within the light table
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: LightTable-Workflow (other bugs)
Version First Reported In: 1.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-22 14:52 UTC by Andi Clemens
Modified: 2022-02-01 09:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.10.0
Sentry Crash Report:


Attachments
error dialog (9.69 KB, image/png)
2009-02-22 14:54 UTC, Andi Clemens
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andi Clemens 2009-02-22 14:52:30 UTC
Version:           0.11.0-svn (using 4.2.00 (KDE 4.2.0), Arch Linux)
Compiler:          gcc
OS:                Linux (i686) release 2.6.28-ARCH

When I add images to the light table and try to delete an item now (move to trash), I get an error dialog, but no descriptive text. Attachment will follow.

This is what I can see in the console during deletion, but this is not much:

digikam(27803)/digikam (core) Digikam::DeleteDialog::accept: setShowTrashDeleteDialog  true
digikam(27803)/kio (Slave) KIO::Slave::createSlave: createSlave "trash" for KUrl("trash:/")
digikam(27803)/kio (KIOConnection) KIO::ConnectionServer::listenForRemote: Listening on  "local:/tmp/ksocket-andi/digikamt27803.slave-socket"
digikam(27803)/kio (KIOJob) KIO::CopyJobPrivate::startRenameJob: This seems to be a suitable case for trying to rename before stat+[list+]copy+del
digikam(27803)/kio (KDirWatch) KDirWatchPrivate::inotifyEventReceived: -->got deleteself signal for "/mnt/data/fotos/digiKam tests/2/bild_15x10cm_30qqqq0dpi.png"
digikam(27803)/kio (KDirWatch) KDirWatchPrivate::addEntry: Added already watched Entry "/mnt/data/fotos/digiKam tests/2" (for "/mnt/data/fotos/digiKam tests/2/bild_15x10cm_30qqqq0dpi.png" )
digikam(27803)/digikam (core) Digikam::AlbumManager::slotKioFileMoved: "file:///mnt/data/fotos/digiKam%20tests/2/bild_15x10cm_30qqqq0dpi.png" "file:///home/andi/.local/share/Trash/files/bild_15x10cm_30qqqq0dpi.png"
digikam(27803) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/mnt/data/fotos/digiKam tests/2"
digikam(27803)/digikam (core) Digikam::AlbumManager::slotKioFilesAdded: "file:///home/andi/.local/share/Trash/files"
digikam(27803)/digikam (core) Digikam::AlbumManager::slotKioFilesDeleted: ("file:///mnt/data/fotos/digiKam%20tests/2/bild_15x10cm_30qqqq0dpi.png")
digikam(27803) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/mnt/data/fotos/digiKam tests/2"
digikam(27803)/kio (KIOJob) KIO::CopyJobPrivate::slotResultRenaming: Renaming succeeded, move on
digikam(27803)/digikam (core) Digikam::AlbumManager::slotKioFileMoved: "file:///mnt/data/fotos/digiKam%20tests/2/bild_15x10cm_30qqqq0dpi.png" "trash:/bild_15x10cm_30qqqq0dpi.png"
digikam(27803) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/mnt/data/fotos/digiKam tests/2"
digikam(27803)/digikam (core) Digikam::AlbumManager::slotKioFilesAdded: "trash:/"
digikam(27803)/digikam (core) Digikam::AlbumManager::slotKioFilesDeleted: ("file:///mnt/data/fotos/digiKam%20tests/2/bild_15x10cm_30qqqq0dpi.png")
digikam(27803) Digikam::AlbumManager::handleKioNotification: KDirNotify detected file change at "/mnt/data/fotos/digiKam tests/2"
digikam(27803)/kio (KDirWatch) KDirWatchPrivate::addEntry: Added already watched Entry "/mnt/data/fotos/digiKam tests/2" (for "/mnt/data/fotos/digiKam tests/2/bild_15x10cm_30qqqq0dpi.png" )
digikam(27803)/kio (KDirWatch) KDirWatch::setDeleted: "KDirWatch-1" emitting deleted "/mnt/data/fotos/digiKam tests/2/bild_15x10cm_30qqqq0dpi.png"
Comment 1 Andi Clemens 2009-02-22 14:54:22 UTC
Created attachment 31539 [details]
error dialog

This is all I get, and the dialog is not resizable, too.
This report is valid for 0.10.0, too... of course.

Andi
Comment 2 caulier.gilles 2009-02-22 14:55:04 UTC
And from albumgui and editor, removing an item work ?

Gilles
Comment 3 Andi Clemens 2009-02-22 14:58:49 UTC
Deleting from AlbumUI, CameraUI and Editor works fine.
Comment 4 caulier.gilles 2009-02-22 15:05:05 UTC
Well, there is not reason that LT do not work. If i rememeber, code is very similar than Editor.

Gilles
Comment 5 Andi Clemens 2009-02-22 15:09:13 UTC
Also the image is not removed from the thumbbar and the panel where it has been deleted from.
When I return to the AlbumUI, the image is gone. Only light table doesn't seem to know this.
Comment 6 Andi Clemens 2009-02-22 15:48:53 UTC
SVN commit 930003 by aclemens:

fix result checking

BUG:185232

 M  +1 -1      lighttablewindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=930003
Comment 7 Andi Clemens 2009-02-22 15:55:15 UTC
SVN commit 930010 by aclemens:

backport:
fix result checking in light table window

CCBUG:185232

 M  +1 -1      lighttablewindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=930010