fix result checking

BUG:185232

svn path=/trunk/extragear/graphics/digikam/; revision=930003